corrected spacing in friends header

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,10 +1,23 @@
 // _forms.scss
 
+.search-header{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  width: 100%;
+}
+
 .search-head {
   display: flex;
   justify-content: space-around;
   padding: 20px;
   width: 100%;
+}
+
+.search-space-between{
+  display: flex;
+  flex-direction:column;
+  align-items: end;
 }
 
 .search-item {
@@ -23,6 +36,7 @@
   display:flex;
   justify-content:space-between;
   align-items: center;
+  width:100%;
 }
 
 .search-bar {
@@ -35,6 +49,8 @@
 
 .search-bar[placeholder] {
   color: $forest;
+  background-color: $forest-light-transparent;
+  text-align: center;
 }
 
 .requests-title {
